[package]
edition = "2021"
name = "game"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.80" }
bevy = { version = "0.12" }
bevy_asset_loader = { version = "0.19.1", features = [
    "standard_dynamic_assets",
] }
bevy_common_assets = { version = "0.9.0", features = ["ron"] }
bevy_ecs_ldtk = { version = "0.9.0" }
bevy_ecs_tilemap = { version = "0.12.0" }
bevy_egui = { version = "0.24.0" }
bevy_ggrs = { version = "0.14.0" }
bevy_matchbox = { version = "0.8.0", features = ["ggrs"] }
bytemuck = { version = "1.14.3" }
clap = { version = "4.5.1", features = ["derive"] }
rapier2d = { version = "0.18.0", features = ["enhanced-determinism"] }
serde = { version = "1.0.197" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.14.0", features = ["wasm-bindgen"] }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
