[package]
name = "game"
edition = "2021"
version = "0.1.0"

[dependencies]
ggrs = { version = "0.10.1" }
anyhow = { version = "1.0.80" }
bevy = { version = "0.13" }
bevy_asset_loader = { version = "0.20.0", features = [
    "standard_dynamic_assets",
] }
bevy_common_assets = { version = "0.10.0", features = ["ron"] }
bevy_egui = { version = "0.25.0" }
bevy_ggrs = { version = "0.15.0" }
bevy_matchbox = { git = "https://github.com/johanhelsing/matchbox", branch = "bevy-0.13", features = [
    "ggrs",
] }
bytemuck = { version = "1.14.3" }
clap = { version = "4.5.1", features = ["derive"] }
rapier2d = { version = "0.18.0", features = ["enhanced-determinism"] }
serde = { version = "1.0.197" }
derivative = "2.2.0"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.15.0", features = ["wasm-bindgen"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
